--- a/Proyecto/Front/Style.css
+++ b/Proyecto/Front/Style.css
@@ -1,3 +1,6 @@
+/*Fuentes de letras*/
+@import url("https://fonts.googleapis.com/css2?family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=M+PLUS+Rounded+1c&family=Patua+One&display=swap");
+
 body {
   font-size: 16px;
   line-height: 1.6;
@@ -59,20 +62,24 @@ body {
 }
 
 .TituloSeccionBienvenida {
-  font-family: sans-serif;
+  font-family: "Patua One", serif;
   font-weight: bolder;
   color: rgb(0, 63, 92);
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin-bottom: 0.5rem;
 }
 
 .SubtituloSeccionBienvenida {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
 .SeccionBienvenida p {
-  margin-bottom: 1rem;
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
+  font-size: 0.9rem;
 }
 
 .bienvenida {
@@ -80,6 +87,8 @@ body {
 }
 
 .btnSeccionBienvenida {
+  font-family: "Patua One", serif;
+
   background-color: rgb(0, 63, 92);
   padding: 7px 20px;
   color: #fff;
@@ -121,6 +130,8 @@ body {
   .SeccionBienvenida p {
     margin-bottom: 0.8rem;
     text-align: center;
+    padding-left: 80px;
+    padding-right: 80px;
   }
   .ContenedorBtn {
     font-size: 1rem;
@@ -141,6 +152,8 @@ body {
   }
   .SeccionBienvenida p {
     margin-bottom: 0.8rem;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -154,8 +167,27 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+.filaSeccionValores {
+  margin-top: 30px;
+}
 .feature {
   padding: 20px;
+}
+.tituloSeccionValores {
+  font-weight: bolder;
+  font-family: "Patua One", serif;
+  font-size: 2.5rem;
+}
+.subtituloSeccionValores {
+  font-family: "Patua One", serif;
+  font-size: 1.5rem;
+}
+.parrafoSeccionValores {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
+  font-size: 0.9rem;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /*Parte Seccion Servicios*/
@@ -165,23 +197,31 @@ body {
   padding-bottom: 60px;
 }
 .tituloServicios {
-  font-weight: bolder;
+  font-family: "Patua One", serif;
   color: rgb(0, 63, 92);
+  font-size: 3rem;
+  font-weight: bolder;
 }
 .imgServicio {
   width: 270px;
   height: 220px;
 }
-.SeccionServicios h3 {
+.subtituloSeccionServicios {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
   color: rgb(0, 63, 92);
+  font-size: 1.3rem;
 }
 .btnSeccionServicios {
+  font-family: "Patua One", serif;
   background-color: rgb(0, 63, 92);
   padding: 10px 20px;
   color: #fff;
   border: none;
   border-radius: 6px;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  text-decoration: none; /* Remove underline from link */
+  display: inline-block; /* Ensure it behaves like a button */
 }
 .btnSeccionServicios:hover {
   transition: 0.5s;
@@ -216,6 +256,12 @@ body {
   height: 100px;
   object-fit: cover;
   border: 5px solid #f8f9fa;
+}
+.tituloTestimonios {
+  font-family: "Patua One", serif;
+  color: rgb(0, 63, 92);
+  font-size: 2.5rem;
+  font-weight: bolder;
 }
 
 .testimonial p {
