--- a/Proyecto/Front/Style.css
+++ b/Proyecto/Front/Style.css
@@ -287,7 +287,7 @@ body {
   color: rgb(0, 63, 92);
   font-size: 2.5rem;
   font-weight: bolder;
-  margin-top: 80px;
+  margin-top: 150px;
   margin-bottom: 50px;
   padding-left: 80px;
   padding-right: 80px;
@@ -330,7 +330,61 @@ body {
   border: none;
   border-radius: 6px;
   font-size: 1.2rem;
-  text-align: start;
-  text-decoration: none; /* Remove underline from link */
-  display: inline-block; /* Ensure it behaves like a button */
+  text-decoration: none;
+  display: inline-block;
+  width: auto;
+  max-width: 200px;
+  margin-left: 0;
+  margin-right: 0;
+  align-self: flex-start;
+}
+
+.service-card .btn:hover {
+  transition: 0.5s;
+  background-color: rgb(0, 108, 158);
+}
+
+.ParrafoCardServicios {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
+  font-size: 0.9srem;
+}
+@media (max-width: 768px) {
+}
+
+@media (max-width: 576px) {
+  .TitituloPaginaServicios {
+    font-family: "Patua One", serif;
+    color: rgb(0, 63, 92);
+    font-size: 2rem;
+    font-weight: bolder;
+    margin-top: 120px;
+    margin-bottom: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .service-card .btn {
+    margin-top: auto;
+    margin-bottom: 30px;
+    font-family: "Patua One", serif;
+    background-color: rgb(0, 63, 92);
+    padding: 10px 20px;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    font-size: 1rem;
+    text-decoration: none;
+    display: inline-block;
+    width: auto;
+    max-width: 200px;
+    margin-left: 0;
+    margin-right: 0;
+    align-self: flex-start;
+  }
+  .TituloCardServicios {
+    margin-top: 20px;
+    font-family: "Patua One", serif;
+    color: rgb(0, 63, 92);
+    font-size: 1.7rem;
+  }
 }
