--- a/Proyecto/Front/Style.css
+++ b/Proyecto/Front/Style.css
@@ -399,3 +399,53 @@ body {
     font-size: 1.7rem;
   }
 }
+
+/*Formato para informacion de servicios*/
+
+.ImgBannerServicios {
+  width: 100%;
+  overflow: hidden;
+}
+
+.img-Banner {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.TituloPediatria {
+  font-family: "Patua One", serif;
+}
+.pediatria-heredia {
+  padding: 50px 0;
+}
+
+.pediatria-heredia h1 {
+  margin-bottom: 30px;
+}
+
+.mission,
+.seguros {
+  background-color: #00b8b8;
+  color: white;
+  padding: 20px;
+  margin: 30px 0;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.que-es-pediatria {
+  margin: 40px 0;
+}
+
+.servicios-imagenes {
+  margin-top: 30px;
+}
+
+.servicios-imagenes img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
