--- a/Proyecto/Front/Style.css
+++ b/Proyecto/Front/Style.css
@@ -304,3 +304,165 @@ body {
 .service-card .btn {
   margin-top: auto;
 }
+
+/*Sección página 404 Error*/
+.SeccionError {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: #f8f9fa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.TituloSeccionError {
+  font-family: "Patua One", serif;
+  font-weight: bolder;
+  color: rgb(0, 63, 92);
+  font-size: 4rem;
+  margin-bottom: 0.5rem;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.AvisoSeccionError {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.SeccionError p {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
+  font-size: 1.1rem;
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btnSeccionErrorHome {
+  font-family: "Patua One", serif;
+  align-items: center;
+  background-color: rgb(0, 63, 92);
+  padding: 7px 20px;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
+@media (max-width: 1200px) {
+  .SeccionError {
+    max-width: 400px;
+  }
+  .btnSeccionErrorHome {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media (max-width: 992px) {
+  .SeccionError {
+    max-width: 350px;
+  }
+  .SeccionError p {
+      margin-bottom: 0.8rem;
+      text-align: center;
+      padding-left: 70px;
+      padding-right: 70px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  .btnSeccionErrorHome {
+      position: absolute;
+      top: 75%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+}
+
+@media (max-width: 768px) {
+  .SeccionError h1 {
+    font-size: 3rem;
+    text-align: center;
+  }
+  .SeccionError h2 {
+    font-size: 1.5rem;
+    text-align: center;
+    position: absolute;
+    top: 32%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .SeccionError p {
+    margin-bottom: 0.8rem;
+    font-size: 1.1rem;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    position: absolute;
+    top: 42%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .btnSeccionErrorHome {
+    font-size: 1rem;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translateX(-50%);
+    }
+  }
+
+@media (max-width: 576px) {
+  .SeccionError {
+    max-width: 250px;
+  }
+  .SeccionError h1 {
+    font-size: 3rem;
+  }
+  .SeccionError h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .SeccionError p {
+    margin-bottom: 0.8rem;
+    padding-left: 10px;
+    padding-right: 30px;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%);
+    }
+    .btnSeccionErrorHome {
+      font-family: "Patua One", serif;
+      align-items: center;
+      background-color: rgb(0, 63, 92);
+      padding: 7px 20px;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      position: absolute;
+      top: 75%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
