--- a/Proyecto/Front/Style.css
+++ b/Proyecto/Front/Style.css
@@ -99,7 +99,6 @@ body {
 
 .btnSeccionBienvenida {
   font-family: "Patua One", serif;
-
   background-color: rgb(0, 63, 92);
   padding: 7px 20px;
   color: #fff;
@@ -401,6 +400,184 @@ body {
 }
 
 /*Formato para informacion de servicios*/
-.imgPediatria {
-  width: 100px;
+
+.TituloSeccionPediatria {
+  text-align: start;
+}
+
+.TituloSeccionPediatria h1 {
+  font-size: 3rem;
+  font-family: "Patua One", serif;
+  font-weight: bold;
+  color: rgb(0, 63, 92);
+  margin-top: 50px;
+  margin-bottom: 1rem;
+}
+
+.TituloSeccionPediatria p {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
+}
+
+.InformacionPediatria {
+  padding: 3rem 0;
+}
+
+.ContenidoPediatria {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.ContenidoPediatria h2 {
+  font-family: "Patua One", serif;
+  font-weight: 600px;
+  color: rgb(0, 63, 92);
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.ContenidoPediatria p {
+  font-size: 1rem;
+  color: #666;
+  margin-bottom: 1.5rem;
+}
+
+.ContenidoPediatria ul {
+  padding-left: 1.5rem;
+}
+
+.ContenidoPediatria li {
+  font-size: 1rem;
+  color: #666;
+  margin-bottom: 0.5rem;
+}
+
+.CarouselPediatria .carousel-inner {
+  height: 400px;
+  margin-bottom: 30px;
+}
+
+.CarouselPediatria .carousel-inner img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.CarouselPediatria .custom-control {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(0, 123, 180);
+  border-radius: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.CarouselPediatria .custom-control .carousel-control-prev-icon,
+.CarouselPediatria .custom-control .carousel-control-next-icon {
+  width: 20px;
+  height: 20px;
+}
+
+
+
+
+@media (max-width: 1200px) {
+  .ContenidoPediatria {
+    max-width: 700px;
+  }
+}
+
+@media (max-width: 992px) {
+  .ContenidoPediatria {
+    max-width: 600px;
+  }
+}
+
+@media (max-width: 768px) {
+  .TituloSeccionPediatria h1 {
+    font-size: 2.3rem;
+  }
+
+  .ContenidoPediatria {
+    max-width: 500px;
+  }
+
+  .ContenidoPediatria h2 {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .ContenidoPediatria p,
+  .ContenidoPediatria ul {
+    text-align: center;
+    padding-left: 0;
+  }
+
+  .ContenidoPediatria li {
+    list-style-type: none;
+  }
+
+}
+
+@media (max-width: 576px) {
+  .TituloSeccionPediatria h1 {
+    font-size: 2rem;
+  }
+
+  .ContenidoPediatria {
+    max-width: 100%;
+    padding: 0 1.5rem;
+  }
+
+  .ContenidoPediatria h2 {
+    font-size: 1.5rem;
+  }
+
+}
+
+/*Seccion anuncio agendar cita*/
+.agendar-cita {
+  background-color: rgb(0, 63, 92);
+  color: white;
+  padding: 5rem 0;
+}
+
+.agendar-cita h2 {
+  font-family: "Patua One", serif;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.agendar-cita p {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.btnAgendar {
+  font-size: 1.25rem;
+  text-decoration: none;
+  font-family: "Patua One", serif;
+  background-color: white;
+  color: rgb(0, 63, 92);
+  padding: 10px 20px;
+  font-weight: bold;
+  border-radius: 6px;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}
+
+.btnAgendar:hover {
+  background-color: rgb(0, 123, 180);
+  color: white;
+}
+
+@media (max-width: 768px) {
+  .agendar-cita .col-md-6 {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
 }
