--- a/Proyecto/Front/Style.css
+++ b/Proyecto/Front/Style.css
@@ -863,3 +863,61 @@ body {
   transition: 0.5s;
   background-color: rgb(0, 108, 158);
 }
+
+/*Sección página 404 Error*/
+.SeccionError {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: #f8f9fa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.TituloSeccionError {
+  font-family: "Patua One", serif;
+  font-weight: bolder;
+  color: rgb(0, 63, 92);
+  font-size: 4rem;
+  margin-bottom: 0.5rem;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.AvisoSeccionError {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.SeccionError p {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
+  font-size: 1.1rem;
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btnSeccionErrorHome {
+  font-family: "Patua One", serif;
+  align-items: center;
+  background-color: rgb(0, 63, 92);
+  padding: 7px 20px;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translateX(-50%);
+}
