--- a/Proyecto/Front/Style.css
+++ b/Proyecto/Front/Style.css
@@ -466,3 +466,95 @@ body {
       transform: translateX(-50%);
     }
   }
+
+  /*Sección Imagen Principal Acerca de:*/
+
+.SeccionAcercaImgPrincipal {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.principal {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: aliceblue;
+  padding: auto;
+  align-items: center;
+  justify-content: center;
+  padding-left: 10px;
+  padding-right: 20px;
+  padding-bottom: 0px;
+  padding-top: 20px;
+}
+
+.TituloSeccionImgPrincipal {
+  font-family: "Patua One", serif;
+  font-weight: bolder;
+  align-items: center;
+  justify-content: center;
+  color: rgb(0, 63, 92);
+  font-size: 3rem;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 0.5rem;
+  position: absolute;
+  top: 8%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@media (max-width: 1400px) {
+  .TituloSeccionImgPrincipal {
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .TituloSeccionImgPrincipal {
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 992px) {
+  .TituloSeccionImgPrincipal {
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .TituloSeccionImgPrincipal {
+    align-items: center;
+    justify-content: center;
+    font-size: 2.2rem;
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .TituloSeccionImgPrincipal {
+    align-items: center;
+    justify-content: center;
+    font-size: 1.9rem;
+    padding-top: 30px;
+  }
+}
+
+
