--- a/Proyecto/Front/Style.css
+++ b/Proyecto/Front/Style.css
@@ -697,3 +697,58 @@ body {
 }
 
 
+/*Seccion Visión*/
+
+.SeccionVision {
+  background-color: aliceblue;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.TituloSeccionVision {
+  font-family: "Patua One", serif;
+  font-weight: bolder;
+  background-color: rgb(0, 63, 92);
+  color: #fff;
+  font-size: 2rem;
+  padding-left: 20px;
+  padding-right: 30px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  text-shadow: 2px 5px #7fb2c2;
+  text-transform: uppercase;
+
+}
+
+.SubtituloSeccionVision {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: bolder;
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.SeccionVision p {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-weight: lighter;
+  font-size: 1.3rem;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 30px;
+  padding-top: 20px;
+}
+
+.Vision {
+  width: 600px;
+  height: 550px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+
+
